--- a/style.css
+++ b/style.css
@@ -1,4 +1,53 @@
-header{
+ 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+ header{
 	box-shadow: 10px;
 }
 h1{
@@ -32,10 +81,20 @@ h1{
 	background-color: rgb(234,243,234);
 	text-align: center;
 }
-.fa-map-marker-alt{
-    position: absolute;
-    top: 12%;
-    left: -3%;
+.fas fa-map-marker-alt{
+    
+    top: 10%;
+    right: 11%;
+}
+.number{
+	position: absolute;
+	border-radius: 86%;
+	border: 1px solid;
+	width: 2%;
+	height: 6%;
+	left: 0%;
+	background-color: #9356DC;
+	color: white;
 }
 .test{
 	display: block;
@@ -70,6 +129,10 @@ figure.picture img{
 	width: 100%;
 	height: 80%;
 }
+.far fa-heart{
+	float: right;
+	
+}
 a.choice{
 	text-decoration: none;
 }
@@ -90,13 +153,6 @@ a.choice{
 .button{
 	text-decoration: none;
 	color: black;
-	border: none;
-	padding: 15px;
-	text-align: center;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	border-radius: 2rem;
 }
 
 .menu_container:hover{
