--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -1,4 +1,157 @@
-body{
-    background-color: red;
+
+ header{
+	box-shadow: 10px;
 }
- 
+h1{
+	display: flex;
+	justify-content: center;
+	font-size: 3rem;
+	font-style: italic;
+	font-weight: bold;
+	font-family: 'roboto', sans sérif;
+	font-family: 'shrikhand',cursive;
+}
+.title{
+	position: relative;
+	text-align: center;
+	right: 30px;
+}
+.main{
+	width: 100%;
+	height: 35px; 
+}
+.nav{
+	width: 90%;
+    height: 50px;
+    border-radius: 22px 20px 22px 23px;
+    background-color: rgb(182,102,216);
+    color: white;
+    font-size: 1rem;
+}
+.icone_location{
+	width: 100%;
+	background-color: rgb(234,243,234);
+	text-align: center;
+
+	}
+.fa-map-marker-alt{
+    position: absolute;
+    top: 12%;
+    left: -3%;
+}
+}
+.test{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: rgb(246, 246, 246);
+}
+p.presentation{
+	color: grey;
+}
+article{
+	display: flex;
+	flex-direction: column;
+}
+.restaurant{
+	width: 100%;
+}
+figure.picture{
+	width: 80%;
+	height: 10%;
+	border: 2px solid white;
+	border-radius: 20px;
+	-webkit-box-shadow: 2px 1px 6px 5px rgba(0,0,0,0.22);
+	box-shadow: 2px 1px 6px 5px rgba(0,0,0,0.22);
+	margin: auto;
+	background-color: white;
+	overflow: hidden;
+	margin-bottom: 30px;
+
+}
+figure.picture img{
+	width: 100%;
+	height: 80%;
+}
+a.choice{
+	text-decoration: none;
+}
+.fa-mobile-alt{
+	
+}
+.menu_container{
+	background-color:rgb(246,246,246);
+	border: none;
+	padding: 15px;
+	text-align: center;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 2rem;
+	width: 75%;
+	}
+.number {
+	position: absolute;
+	border-radius: 86%;
+	border: 1px solid;
+	width: 2%;
+	height: 6%;
+	left: 0%;
+	background-color: #9356DC;
+	color: white;
+	}
+.button{
+	text-decoration: none;
+	color: black;
+	border: none;
+	padding: 15px;
+	text-align: center;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	border-radius: 2rem;
+}
+
+.menu_container:hover{
+	background-color: rgb(245,247,254);
+}
+.menu{
+	text-decoration: none;
+	color: black;
+}
+footer{
+	background-color: rgb(53,53,53);
+	color: white;
+}
+.partner{
+	text-decoration: none;
+	color: white;
+}
+.contact{
+	color: white;
+	text-decoration: none;
+}
+/*Css palette du goût*/
+.arrow{
+	position: absolute;
+	top: 8%;
+	font-size: 2rem;
+}
+.banner{
+	width: 100%;
+}
+.title_menu{
+	font-size: 2rem;
+	font-style: italic;
+	font-weight: bold;
+	font-family: 'roboto', sans sérif;
+	font-family: 'shrikhand',cursive;
+}
+.carte_menu{
+	display: flex;
+	flex-direction: column;
+}
+.btn{
+	border-radius: 22px;
+	margin-bottom: 10px;
+}
