--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "UTF-8"; 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -47,7 +47,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+@media screen and (max-width: 870px){
+	body{
+		width: auto;
+		margin: 0;
+		padding: 0;
+	}
 header {
           border-bottom: 1px;
           border-top: 1px solid white;
