--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -1,59 +1,8 @@
-@charset "UTF-8"; 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
+@charset "UTF-8";
 header {
-          border-bottom: 1px;
-          border-top: 1px solid white;
-          margin-top: 11px;
-          height: 60px;
-      }
+  -webkit-box-shadow: 10px;
+          box-shadow: 10px;
+}
 
 h1 {
   display: -webkit-box;
@@ -80,60 +29,36 @@ h1 {
   height: 35px;
 }
 
-
+.nav {
+  width: 90%;
+  height: 50px;
+  border-radius: 22px 20px 22px 23px;
+  background-color: #b666d8;
+  color: white;
+  font-size: 1rem;
+}
 
 .icone_location {
   width: 100%;
-  background-color: rgb(234,234,234);
+  background-color: #eaf3ea;
   text-align: center;
-  line-height: 50px;
 }
 
-.icone_location .fa-map-marker-alt {
+.fa-map-marker-alt {
   position: absolute;
-  left: 27%;
-  line-height: 45px;
-}
-.number{
-position: absolute;
-background-color: #9356DC;
-width: 9%;
-border: 1px solid white;
-border-radius: 50%;
-height: 34px;
-left: 0px;
-color: #fff;
-line-height: 33px;
 }
 
-.heading{
+.test {
   display: block;
   margin-left: auto;
   margin-right: auto;
   background-color: #f6f6f6;
 }
-.heading__header{
-  font-size: 2rem;
-  font-family:'shrikhand',cursive;
-  text-align: center;
-  height: 90px;
-  line-height: 42px;
-}
 
-.heading__presentattion {
+p.presentation {
   color: grey;
 }
-.heading__nav{
-  width: 90%;
-    height: 50px;
-    border-radius: 22px 20px 22px 23px;
-    background-color: rgb(182,102,216);
-    color: white;
-    font-size: 1rem;
-}
-h2{
 
-}
 article {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -159,7 +84,6 @@ figure.picture {
   background-color: white;
   overflow: hidden;
   margin-bottom: 30px;
-  padding: 0;
 }
 
 figure.picture img {
@@ -177,24 +101,22 @@ a.choice {
   padding: 15px;
   text-align: center;
   display: inline-block;
-  line-height:1%;
   font-size: 16px;
   margin: 4px 2px;
-  margin-left: 16px;
   border-radius: 2rem;
-  width: 80%;
-  height: 35px;    
-  margin-top: 5%;
-  margin-bottom: 5%;
-  box-shadow: 1px 3px 1px 1px rgba(0,0,0,0.22);
-}
-.fa-heart{
-  float: Right;
-  position: relative;
-  top: -31px;
+  width: 75%;
 }
 
-
+.number {
+  position: absolute;
+  border-radius: 86%;
+  border: 1px solid;
+  width: 2%;
+  height: 6%;
+  left: 0%;
+  background-color: #9356DC;
+  color: white;
+}
 
 .button {
   text-decoration: none;
@@ -220,14 +142,6 @@ a.choice {
 footer {
   background-color: #353535;
   color: white;
-  padding-left: 15px;
-}
-h3{
-  padding-bottom: 15px;
-  font-family:'shrikhand',cursive;
-}
-.footer{
-  padding-bottom: 10px;
 }
 
 .partner {
