--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -1,16 +1,77 @@
-
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
  header{
-	box-shadow: 10px;
+	border-bottom: 1px solid black;
+	border-top:1px solid white;
+	margin-top:11px;
+	height:60px;
 }
 h1{
 	display: flex;
 	justify-content: center;
 	font-size: 3rem;
 	font-style: italic;
-	font-weight: bold;
-	font-family: 'roboto', sans sérif;
 	font-family: 'shrikhand',cursive;
 }
+.icone_location{
+	width: 100%;
+	text-align: center;
+	line-height: 50px;
+	background-color: rgb(234,234,234);
+}.
+.fa-map-marker-alt{
+		top: 13%;
+		left:27%;
+		position:absolute;	
+	}
+
+
 .title{
 	position: relative;
 	text-align: center;
@@ -28,23 +89,19 @@ h1{
     color: white;
     font-size: 1rem;
 }
-.icone_location{
-	width: 100%;
-	background-color: rgb(234,243,234);
-	text-align: center;
 
-	}
-.fa-map-marker-alt{
-    position: absolute;
-    
+
+.heading__nav{
+	width: 90%;
+	height: 50px;
+	border-radius: 22px 20px 22px 23px;
+	background-color: rgb(182,102,216);
+	color: white;
+	font-size: 1rem;
+
 }
-}
-.test{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: rgb(246, 246, 246);
-}
+
+
 p.presentation{
 	color: grey;
 }
@@ -75,9 +132,7 @@ figure.picture img{
 a.choice{
 	text-decoration: none;
 }
-.fa-mobile-alt{
-	
-}
+
 .menu_container{
 	background-color:rgb(246,246,246);
 	border: none;
