--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -59,11 +59,10 @@ header {
   border-top: 1px solid white;
   margin-top: 11px;
   height: 60px;
-=======
+  }
 header {
   -webkit-box-shadow: 10px;
           box-shadow: 10px;
->>>>>>> 741e8d3e2d75a6dfa6a1006995c8c6400922571c
 }
 
 h1 {
@@ -109,7 +108,6 @@ h1 {
   background-color: #b666d8;
   color: white;
   font-size: 1rem;
-<<<<<<< HEAD
 }
 
 .heading__nav {
@@ -147,7 +145,6 @@ h1 {
   margin-right: auto;
   background-color: #f6f6f6;
 }
->>>>>>> 741e8d3e2d75a6dfa6a1006995c8c6400922571c
 
 p.presentation {
   color: grey;
@@ -202,8 +199,7 @@ a.choice {
 }
 
 .number {
-  position: absolute;
-<<<<<<< HEAD
+position: absolute;
 border-radius: 50%;
 border: 1px solid;
 width: 2%;
@@ -213,15 +209,6 @@ background-color: #9356DC;
 color: white;
 width: 10%;
 line-height: 2;
-=======
-  border-radius: 86%;
-  border: 1px solid;
-  width: 2%;
-  height: 6%;
-  left: 0%;
-  background-color: #9356DC;
-  color: white;
->>>>>>> 741e8d3e2d75a6dfa6a1006995c8c6400922571c
 }
 
 .button {
