--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -81,26 +81,25 @@ h1{
 	width: 100%;
 	height: 35px; 
 }
+$color-primary: #9356DC;
+$color-secondary:#FF79DA;
+$color-tertiary: #99E2D0; 
 .nav{
 	width: 90%;
     height: 50px;
     border-radius: 22px 20px 22px 23px;
-    background-color: rgb(182,102,216);
+    background-color: $color-primary;
     color: white;
     font-size: 1rem;
 }
-
-<<<<<<< HEAD
 
 .heading__nav{
 	width: 90%;
 	height: 50px;
 	border-radius: 22px 20px 22px 23px;
-	background-color: rgb(182,102,216);
+	background-color: $color-secondary;
 	color: white;
 	font-size: 1rem;
-
-=======
 	}
 .fa-map-marker-alt{
     position: absolute;
@@ -112,7 +111,6 @@ h1{
 	margin-left: auto;
 	margin-right: auto;
 	background-color: rgb(246, 246, 246);
->>>>>>> 741e8d3e2d75a6dfa6a1006995c8c6400922571c
 }
 
 
