--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -47,7 +47,7 @@ table {
 	border-spacing: 0;
 }
  header{
-	border-bottom: 1px solid black;
+	border-bottom: 1px;
 	border-top:1px solid white;
 	margin-top:11px;
 	height:60px;
@@ -58,32 +58,51 @@ h1{
 	font-size: 3rem;
 	font-style: italic;
 	font-family: 'shrikhand',cursive;
+	line-height: 1px;
+}
+
+.fa-map-marker-alt{
+	top: 82px;
+	left:27%;
+	position:absolute;	
+	}
+.heading{
+background-color: rgb(234,234,234);
+.heading__nav {
+		width: 90%;
+		height: 50px;
+		border-radius: 22px 20px 22px 23px;
+		background-color: #b666d8;
+		color: white;
+		font-size: 1rem;
+}
+.heading__header{
+  font-family: 'shirkhand',sans-serif;
+  font-size: 1.6rem;
+  margin-top: 50px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-weight: bold;
+}    
+
+.heading__presentation{
+	margin-top: 25px;
+	margin-bottom: 20px;
+	text-align: center;
 }
 .icone_location{
 	width: 100%;
 	text-align: center;
 	line-height: 50px;
 	background-color: rgb(234,234,234);
-}.
-.fa-map-marker-alt{
-		top: 13%;
-		left:27%;
-		position:absolute;	
-	}
+}
+}
 
 
-.title{
-	position: relative;
-	text-align: center;
-	right: 30px;
-}
-.main{
-	width: 100%;
-	height: 35px; 
-}
 $color-primary: #9356DC;
 $color-secondary:#FF79DA;
-$color-tertiary: #99E2D0; 
+$color-tertiary: #99E2D0;
+
 .nav{
 	width: 90%;
     height: 50px;
@@ -93,25 +112,13 @@ $color-tertiary: #99E2D0;
     font-size: 1rem;
 }
 
-.heading__nav{
-	width: 90%;
-	height: 50px;
-	border-radius: 22px 20px 22px 23px;
-	background-color: $color-secondary;
-	color: white;
-	font-size: 1rem;
-	}
+
 .fa-map-marker-alt{
     position: absolute;
     
 }
 
-.test{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: rgb(246, 246, 246);
-}
+
 
 
 p.presentation{
