--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -151,6 +151,11 @@ figure.picture img{
 a.choice{
 	text-decoration: none;
 }
+.fa-heart{
+	position: relative;
+	top: -24px;
+	left: 90%;
+}
 
 .menu_container{
 	background-color:rgb(246,246,246);
