--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -168,7 +168,7 @@ article {
 
 figure.picture {
   width: 80%;
-  height: 10%;
+  height: 200px;
   border: 2px solid white;
   border-radius: 20px;
   -webkit-box-shadow: 2px 1px 6px 5px rgba(0, 0, 0, 0.22);
@@ -187,6 +187,12 @@ figure.picture img {
 a.choice {
   text-decoration: none;
 }
+.fa-heart{
+	position: relative;
+	top: -24px;
+	left: 90%;
+}
+
 
 .menu_container {
   background-color: #f6f6f6;
