--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -44,7 +44,7 @@ blockquote, q {
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -53,49 +53,40 @@ table {
   border-spacing: 0;
 }
 
+h2 {
+  font-family: "shrikhand", sans-serif;
+}
+
+p {
+  font-family: sans-serif;
+}
+
 header {
   border-bottom: 1px;
   border-top: 1px solid white;
   margin-top: 11px;
   height: 60px;
-  }
-header {
-  -webkit-box-shadow: 10px;
-          box-shadow: 10px;
 }
 
 h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   font-size: 3rem;
   font-style: italic;
-  font-family: 'shrikhand',cursive;
+  font-family: "shrikhand", cursive;
+  line-height: 1px;
 }
 
-.icone_location {
-  width: 100%;
-  text-align: center;
-  line-height: 50px;
-  background-color: rgb(234,234,234);
-}
-.fa-map-marker-alt{
-  top: 13%;
-		left:27%;
-		position:absolute;
+.fa-map-marker-alt {
+  top: 82px;
+  left: 27%;
+  position: absolute;
 }
 
-.title {
-  position: relative;
-  text-align: center;
-  right: 30px;
+.heading {
+  background-color: #eaeaea;
 }
-
-
-.nav {
+.heading .heading__nav {
   width: 90%;
   height: 50px;
   border-radius: 22px 20px 22px 23px;
@@ -103,49 +94,43 @@ h1 {
   color: white;
   font-size: 1rem;
 }
-.heading{
-  background-color: rgb(234,234,234);
-}
-
-.heading__nav {
-  width: 90%;
-  height: 50px;
-  border-radius: 22px 20px 22px 23px;
-  background-color: #b666d8;
-  color: white;
-  font-size: 1rem;
-}
-.heading__header{
-  font-family: 'shirkhand',sans-serif;
+.heading .heading__header {
+  font-family: "shirkhand", sans-serif;
   font-size: 1.6rem;
   margin-top: 50px;
   margin-bottom: 15px;
   text-align: center;
   font-weight: bold;
+  padding: 50px 0px;
 }
-.heading__presentation{
-	margin-top: 25px;
-	margin-bottom: 20px;
-	text-align: center;
-}
-
-
-
-.icone_location {
-  width: 100%;
-  background-color: #eaf3ea;
+.heading .heading__presentation {
+  margin-top: 25px;
+  margin-bottom: 20px;
   text-align: center;
+}
+.heading .icone_location {
+  width: 100%;
+  text-align: center;
+  line-height: 50px;
+  background-color: #eaeaea;
+}
+
+h2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.nav {
+  width: 90%;
+  height: 50px;
+  border-radius: 22px 20px 22px 23px;
+  background-color: #FF79DA;
+  color: white;
+  font-size: 1rem;
 }
 
 .fa-map-marker-alt {
   position: absolute;
-}
-
-.test {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #f6f6f6;
 }
 
 p.presentation {
@@ -153,13 +138,8 @@ p.presentation {
 }
 
 article {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .restaurant {
@@ -168,7 +148,7 @@ article {
 
 figure.picture {
   width: 80%;
-  height: 200px;
+  height: 251px;
   border: 2px solid white;
   border-radius: 20px;
   -webkit-box-shadow: 2px 1px 6px 5px rgba(0, 0, 0, 0.22);
@@ -181,18 +161,14 @@ figure.picture {
 
 figure.picture img {
   width: 100%;
-  height: 80%;
+  height: 66%;
 }
 
-a.choice {
-  text-decoration: none;
+.fa-heart {
+  position: relative;
+  top: -24px;
+  left: 90%;
 }
-.fa-heart{
-	position: relative;
-	top: -24px;
-	left: 90%;
-}
-
 
 .menu_container {
   background-color: #f6f6f6;
@@ -207,16 +183,14 @@ a.choice {
 }
 
 .number {
-position: absolute;
-border-radius: 50%;
-border: 1px solid;
-width: 2%;
-height: 6%;
-left: -4%;
-background-color: #9356DC;
-color: white;
-width: 10%;
-line-height: 2;
+  position: absolute;
+  border-radius: 86%;
+  border: 1px solid;
+  width: 2%;
+  height: 6%;
+  left: 0%;
+  background-color: #9356DC;
+  color: white;
 }
 
 .button {
@@ -270,22 +244,18 @@ footer {
   font-size: 2rem;
   font-style: italic;
   font-weight: bold;
-  font-family: 'roboto', sans sérif;
-  font-family: 'shrikhand',cursive;
+  font-family: "roboto", sans sérif;
+  font-family: "shrikhand", cursive;
 }
 
 .carte_menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .btn {
   border-radius: 22px;
   margin-bottom: 10px;
 }
+
 /*# sourceMappingURL=style.css.map */
