--- a/page_menu.css
+++ b/page_menu.css
@@ -58,6 +58,8 @@ h1{
 	font-weight:  bold;
 	font-family: 'roboto', sans-serif;
 	font-family: 'shrikhand',cursive;
+	margin-bottom: 20px;
+	margin-top: 30px;
 }
 body{
 	background-color: rgb(246,246,246);
@@ -72,7 +74,9 @@ body{
 	width: 100%;
 }
 .fa-heart{
-	float:right;
+	position: absolute;
+	top: 53%;
+	left: 95%;	
 }
 .title_menu{
 	font-size: 2rem;
@@ -82,7 +86,6 @@ body{
 	font-family: 'shrikhand',cursive;
 }
 .carte_menu{
-	text-align: center;
 	background-color:rgb(246,246,246);
 }
 h2{
@@ -97,10 +100,25 @@ h2{
 	box-shadow: -1px -1px 2px -1px gray;
 	width: 90%;
 }
-.button__commander{
-	background-color: #FF79DA;
-	display: flex;
+p.menu_price{
+	position: absolute;
+	left: 75%;
+	top: 55%;
 }
+.button__commander{
+background-color: #FF79DA;
+display: flex;
+border: 1px solid;
+width: 60%;
+justify-content: center;
+margin-top: 20px;
+margin-bottom: 20px;
+text-decoration: none;
+border-radius: 50px;
+height: 36PX;
+line-height: 2;
+}
+
 .menu_plat{
 	border-bottom: 2px solid rgb(155,225,208);
 	width: 10%;
