--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -1,261 +1,8 @@
-@charset "UTF-8";
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
 
-body {
-  line-height: 1;
-}
 
-ol, ul {
-  list-style: none;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "}".\a     \2577 \a 239 \2502  }\a     \2502   ^\a     \2575 \a   dark-sass/src/style.scss 239:2  root stylesheet';
 }
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-h2 {
-  font-family: "shrikhand", sans-serif;
-}
-
-p {
-  font-family: sans-serif;
-}
-
-header {
-  border-bottom: 1px;
-  border-top: 1px solid white;
-  margin-top: 11px;
-  height: 60px;
-}
-
-h1 {
-  display: flex;
-  justify-content: center;
-  font-size: 3rem;
-  font-style: italic;
-  font-family: "shrikhand", cursive;
-  line-height: 1px;
-}
-
-.fa-map-marker-alt {
-  top: 82px;
-  left: 27%;
-  position: absolute;
-}
-
-.heading {
-  background-color: #eaeaea;
-}
-.heading .heading__nav {
-  width: 90%;
-  height: 50px;
-  border-radius: 22px 20px 22px 23px;
-  background-color: #b666d8;
-  color: white;
-  font-size: 1rem;
-}
-.heading .heading__header {
-  font-family: "shirkhand", sans-serif;
-  font-size: 1.6rem;
-  margin-top: 50px;
-  margin-bottom: 15px;
-  text-align: center;
-  font-weight: bold;
-  padding: 50px 0px;
-}
-.heading .heading__presentation {
-  margin-top: 25px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-.heading .icone_location {
-  width: 100%;
-  text-align: center;
-  line-height: 50px;
-  background-color: #eaeaea;
-}
-
-h2 {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.nav {
-  width: 90%;
-  height: 50px;
-  border-radius: 22px 20px 22px 23px;
-  background-color: #FF79DA;
-  color: white;
-  font-size: 1rem;
-}
-
-.fa-map-marker-alt {
-  position: absolute;
-}
-
-p.presentation {
-  color: grey;
-}
-
-article {
-  display: flex;
-  flex-direction: column;
-}
-
-.restaurant {
-  width: 100%;
-}
-
-figure.picture {
-  width: 80%;
-  height: 251px;
-  border: 2px solid white;
-  border-radius: 20px;
-  -webkit-box-shadow: 2px 1px 6px 5px rgba(0, 0, 0, 0.22);
-  box-shadow: 2px 1px 6px 5px rgba(0, 0, 0, 0.22);
-  margin: auto;
-  background-color: white;
-  overflow: hidden;
-  margin-bottom: 30px;
-}
-
-figure.picture img {
-  width: 100%;
-  height: 66%;
-}
-
-.fa-heart {
-  position: relative;
-  top: -24px;
-  left: 90%;
-}
-
-.menu_container {
-  background-color: #f6f6f6;
-  border: none;
-  padding: 15px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  border-radius: 2rem;
-  width: 75%;
-}
-
-.number {
-  position: absolute;
-  border-radius: 86%;
-  border: 1px solid;
-  width: 2%;
-  height: 6%;
-  left: 0%;
-  background-color: #9356DC;
-  color: white;
-}
-
-.button {
-  text-decoration: none;
-  color: black;
-  border: none;
-  padding: 15px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  border-radius: 2rem;
-}
-
-.menu_container:hover {
-  background-color: #f5f7fe;
-}
-
-.menu {
-  text-decoration: none;
-  color: black;
-}
-
-footer {
-  background-color: #353535;
-  color: white;
-}
-
-.partner {
-  text-decoration: none;
-  color: white;
-}
-
-.contact {
-  color: white;
-  text-decoration: none;
-}
-
-/*Css palette du goût*/
-.arrow {
-  position: absolute;
-  top: 8%;
-  font-size: 2rem;
-}
-
-.banner {
-  width: 100%;
-}
-
-.title_menu {
-  font-size: 2rem;
-  font-style: italic;
-  font-weight: bold;
-  font-family: "roboto", sans sérif;
-  font-family: "shrikhand", cursive;
-}
-
-.carte_menu {
-  display: flex;
-  flex-direction: column;
-}
-
-.btn {
-  border-radius: 22px;
-  margin-bottom: 10px;
-}
-
-/*# sourceMappingURL=style.css.map */
