--- a/dark-sass/src/page_menu.css
+++ b/dark-sass/src/page_menu.css
@@ -1,1 +1,172 @@
-/* No CSS *//*# sourceMappingURL=page_menu.css.map */
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+header {
+  height: 50px;
+}
+
+h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: bold;
+  font-family: 'roboto', sans-serif;
+  font-family: 'shrikhand',cursive;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+body {
+  background-color: #f6f6f6;
+}
+
+.arrow {
+  position: absolute;
+  top: 1%;
+  font-size: 1.2rem;
+}
+
+.banner {
+  width: 100%;
+}
+
+.fa-heart {
+  position: absolute;
+  top: 53%;
+  left: 95%;
+}
+
+.title_menu {
+  font-size: 2rem;
+  font-style: italic;
+  font-weight: bold;
+  font-family: 'roboto', sans sérif;
+  font-family: 'shrikhand',cursive;
+}
+
+.carte_menu {
+  background-color: #f6f6f6;
+}
+
+h2 {
+  font-family: 'roboto',sans-serif;
+  font-size: 1rem;
+}
+
+.button {
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 31px;
+  margin-top: 10px;
+  -webkit-box-shadow: -1px -1px 2px -1px gray;
+          box-shadow: -1px -1px 2px -1px gray;
+  width: 90%;
+}
+
+p.menu_price {
+  position: absolute;
+  left: 75%;
+  top: 55%;
+}
+
+.button__commander {
+  background-color: #FF79DA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px solid;
+  width: 60%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-decoration: none;
+  border-radius: 50px;
+  height: 36px;
+  line-height: 2;
+  margin-left: 65px;
+}
+
+.menu_plat {
+  border-bottom: 2px solid #9be1d0;
+  width: 10%;
+}
+
+.btn {
+  border-radius: 22px;
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+}
+
+.partner {
+  text-decoration: none;
+  color: white;
+}
+
+.contact {
+  color: white;
+  text-decoration: none;
+}
+/*# sourceMappingURL=page_menu.css.map */
