--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -81,13 +81,14 @@ h1{
 .heading{
 background-color: rgb(246,246,246);
 .heading__nav {
-		width: 90%;
+		width: 65%;
 		height: 50px;
 		border-radius: 22px 20px 22px 23px;
 		background-color: #b666d8;
 		color: white;
 		font-size: 1rem;
 		margin-bottom:70px;
+		margin-left:57px;
 }
 .heading__header{
   font-family: 'shirkhand',sans-serif;
