--- a/dark-sass/src/page_menu.scss
+++ b/dark-sass/src/page_menu.scss
@@ -53,13 +53,14 @@ header{
 h1{
 	display: flex;
 	justify-content: center;
-	font-size: 2rem;
+	font-size: 1.6rem;
 	font-style: italic;
 	font-weight:  bold;
 	font-family: 'roboto', sans-serif;
 	font-family: 'shrikhand',cursive;
 	margin-bottom: 20px;
 	margin-top: 30px;
+	width:88%;
 }
 body{
 	background-color: rgb(246,246,246);
@@ -67,23 +68,27 @@ body{
 
 .arrow{
 	position: absolute;
-	top: 1%;
+	top: 5%;
 	font-size: 1.2rem;
+	left:34px;
 }
 .banner{
 	width: 100%;
 }
 .fa-heart{
-	position: absolute;
-	top: 53%;
-	left: 95%;	
+	position: relative;
+	top: 25px;
+	left: -33px;	
 }
 .title_menu{
+	display: flex;
+	justify-content: center;
 	font-size: 2rem;
 	font-style: italic;
 	font-weight:  bold;
-	font-family: 'roboto', sans sérif;
+	font-family: 'roboto', sans-serif;
 	font-family: 'shrikhand',cursive;
+	padding-right: 8px;
 }
 .carte_menu{
 	background-color:rgb(246,246,246);
@@ -95,7 +100,7 @@ h2{
 .button{
 	background-color: white;
     border: 1px solid white;
-    border-radius: 31px;
+    border-radius: 18px;
     margin-top: 10px;
 	box-shadow: -1px -1px 2px -1px gray;
 	width: 90%;
@@ -117,7 +122,7 @@ text-decoration: none;
 border-radius: 50px;
 height: 36px;
 line-height: 2;
-margin-left: 65px;
+margin-left: 64px;
 }
 
 .menu_plat{
