--- a/dark-sass/src/style.css
+++ b/dark-sass/src/style.css
@@ -44,7 +44,7 @@ blockquote, q {
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -54,7 +54,7 @@ table {
 }
 
 h2 {
-  font-family: 'shrikhand',sans-serif;
+  font-family: "shrikhand", sans-serif;
 }
 
 header {
@@ -65,15 +65,11 @@ header {
 }
 
 h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   font-size: 3rem;
   font-style: italic;
-  font-family: 'shrikhand',cursive;
+  font-family: "shrikhand", cursive;
 }
 
 .icone_location {
@@ -82,13 +78,11 @@ h1 {
   background-color: #eaeaea;
   height: 49px;
 }
-
 .icone_location .fa-map-marker-alt {
   top: 84px;
   left: 27%;
   position: absolute;
 }
-
 .icone_location p.paris_ville {
   line-height: 45px;
 }
@@ -96,7 +90,6 @@ h1 {
 .heading {
   background-color: #f6f6f6;
 }
-
 .heading .heading__nav {
   width: 65%;
   height: 50px;
@@ -107,16 +100,14 @@ h1 {
   margin-bottom: 70px;
   margin-left: 57px;
 }
-
 .heading .heading__header {
-  font-family: 'shirkhand',sans-serif;
+  font-family: "shirkhand", sans-serif;
   font-size: 1.6rem;
   margin-bottom: 15px;
   text-align: center;
   font-weight: bold;
   padding: 50px 0px;
 }
-
 .heading .heading__presentation {
   margin-bottom: 20px;
   text-align: center;
@@ -125,14 +116,12 @@ h1 {
 .operation {
   background-color: white;
 }
-
 .operation .fonctionnement {
   margin-bottom: 50px;
   font-size: 1.6rem;
   margin-top: 50px;
   margin-left: 20px;
 }
-
 .operation .menu_container {
   background-color: #f6f6f6;
   border: none;
@@ -144,7 +133,6 @@ h1 {
   border-radius: 2rem;
   width: 75%;
 }
-
 .operation .number {
   position: absolute;
   border-radius: 50%;
@@ -164,7 +152,6 @@ h2 {
 .restaurant {
   background-color: #f6f6f6;
 }
-
 .restaurant .restaurants {
   font-size: 1.6rem;
   margin-top: 42px;
@@ -186,13 +173,8 @@ p.presentation {
 }
 
 article {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .restaurant {
@@ -215,6 +197,7 @@ figure.picture {
 figure.picture img {
   width: 100%;
   height: 66%;
+  object-fit: cover;
 }
 
 .fa-heart {
@@ -247,16 +230,17 @@ figure.picture img {
 footer {
   background-color: #353535;
   color: white;
-}
-
-.partner {
+  padding-left: 15px;
   text-decoration: none;
   color: white;
 }
-
-.contact {
-  color: white;
+footer .partner {
   text-decoration: none;
+  color: white;
+}
+footer .contact {
+  text-decoration: none;
+  color: white;
 }
 
 /*Css palette du goût*/
@@ -274,22 +258,18 @@ footer {
   font-size: 2rem;
   font-style: italic;
   font-weight: bold;
-  font-family: 'roboto', sans-serif;
-  font-family: 'shrikhand',cursive;
+  font-family: "roboto", sans-serif;
+  font-family: "shrikhand", cursive;
 }
 
 .carte_menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .btn {
   border-radius: 22px;
   margin-bottom: 10px;
 }
+
 /*# sourceMappingURL=style.css.map */
