--- a/dark-sass/src/page_menu.css
+++ b/dark-sass/src/page_menu.css
@@ -108,6 +108,8 @@ body {
 h2 {
   font-family: "roboto", sans-serif;
   font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 4px;
 }
 
 .button {
@@ -117,12 +119,14 @@ h2 {
   margin-top: 10px;
   box-shadow: -1px -1px 2px -1px gray;
   width: 90%;
+  height: 62px;
 }
 
 p.menu_price {
   position: absolute;
-  left: 75%;
+  left: 88%;
   top: 55%;
+  margin-top: 30;
 }
 
 .button__commander {
