--- a/dark-sass/src/page_menu.scss
+++ b/dark-sass/src/page_menu.scss
@@ -96,6 +96,8 @@ body{
 h2{
 	font-family:'roboto',sans-serif;
 	font-size:1rem;
+	font-weight: bold;
+	margin-bottom: 4px;
 }
 .button{
 	background-color: white;
@@ -104,11 +106,13 @@ h2{
     margin-top: 10px;
 	box-shadow: -1px -1px 2px -1px gray;
 	width: 90%;
+	height:62px;
 }
 p.menu_price{
 	position: absolute;
-	left: 75%;
+	left: 88%;
 	top: 55%;
+	margin-top: 30;
 }
 .button__commander{
 background-color: #FF79DA;
