--- a/dark-sass/src/style.scss
+++ b/dark-sass/src/style.scss
@@ -47,7 +47,10 @@ table {
 	border-spacing: 0;
 }
 h2{
-	font-family:'shrikhand',sans-serif;
+	font-family:'roboto',sans-serif;
+	font-weight: bold;
+	margin-bottom: 20px;
+	font-size: 1rem;
 }
 
  header{
@@ -142,11 +145,6 @@ $color-tertiary: #99E2D0;
 	}
 }
 
-
-h2{
-	
-	margin-bottom: 20px;
-}
 .restaurant{
 	background-color: #f6f6f6;
 	.restaurants{
@@ -190,17 +188,17 @@ figure.picture{
 	overflow: hidden;
 	margin-bottom: 30px;
 
-}
+	}
 figure.picture img{
 	width: 100%;
 	height: 66%;
 	object-fit: cover;
-}
+	}
 .fa-heart{
 	position: relative;
 	top: -24px;
 	left: 90%;
-}
+	}
 
 .button{
 	text-decoration: none;
@@ -212,15 +210,15 @@ figure.picture img{
 	font-size: 16px;
 	margin: 4px 2px;
 	border-radius: 2rem;
-}
+	}
 
 .menu_container:hover{
 	background-color: rgb(245,247,254);
-}
+	}
 .menu{
 	text-decoration: none;
 	color: black;
-}
+	}
 footer{
 	background-color: rgb(53,53,53);
 	color: white;
@@ -230,11 +228,11 @@ footer{
 .partner{
 	text-decoration: none;
 	color:white;
-}
+	}
 .contact{
 	text-decoration: none;
 	color:white;
-}
+	}
 }
 /*Css palette du goût*/
 .arrow{
